--- a/session-3/homework/zalohomework/homework.css
+++ b/session-3/homework/zalohomework/homework.css
@@ -1,6 +1,6 @@
 * {
-    margin: 5px;
-    padding: 5px;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
   } 
 
@@ -16,8 +16,8 @@
 
 .fakeimg {
     background: rgb(209, 209, 209);
-    width: 100%;
-    height: 300px;
+    width: 95%;
+    height: 450px;
     align-items: center;
     justify-content: center;
 }
@@ -42,10 +42,12 @@ h3 {
     line-height: 25px;
 }
 button {
-    width: 120px;
+    width: 150px;
     height: 50px;
-    background: rgb(0, 72, 255);
+    background: rgb(12, 162, 221);
     color: white;
+    margin-left: 30px;
+    font-style: bold;
 }
 button:hover {
     background: rgb(100, 38, 38);
