--- a/session-3/homework/workbookss3/contact.css
+++ b/session-3/homework/workbookss3/contact.css
@@ -1,9 +1,15 @@
+hr {
+    border-top: 5px dashed gray;
+    width: 50%;
+    text-align:left;
+    margin-left:0;
+}
 .message textarea {
     resize: none;
 }
 .main a {
     text-decoration: none;
-    color: #bbbbb9;
+    color: #2763a2;
 }
 .main a:hover {
     color: black;
