--- a/session-3/homework/workbookss3/contact.css
+++ b/session-3/homework/workbookss3/contact.css
@@ -1,3 +1,6 @@
+body {
+    font-family: 'Open Sans', sans-serif;
+}
 hr {
     border-top: 5px dashed gray;
     width: 50%;
@@ -13,9 +16,6 @@ hr {
 }
 .main a:hover {
     color: black;
-}
-body {
-    font-family: Arial, Helvetica, sans-serif;
 }
 .avatar {
     border-radius: 50%;
